# dependencies

msgpack-c/: CMakeLists.txt  LICENSE
vatsim-auth/: CMakeLists.txt
